syntax = "proto3";

package mes_grpc;

import "google/protobuf/timestamp.proto";

option go_package = "proto/mes_grpc";

service MessengerServer {
  rpc SendMessage(ChatMessage) returns (Time);
  rpc ReadMessages(Empty) returns (stream ChatMessage);
}

message ChatMessage {
  string author = 1;
  string text = 2;
  google.protobuf.Timestamp sendTime = 3;
}

message Time {
  google.protobuf.Timestamp sendTime = 1;
}

message Empty {
}